# SEER

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dead_loop  thread_time
config/: task_graph_example.yaml
config/mock/mock_task_graph_1/: exit_task_1.yaml  middle_task_1.yaml  middle_task_2.yaml  sensor_task_1.yaml  sensor_task_2.yaml  sensor_task_3.yaml  task_graph_mock_1.yaml
config/mock/mock_task_graph_2/: exit_task_1.yaml  middle_task_1.yaml  middle_task_10.yaml  middle_task_11.yaml  middle_task_12.yaml  middle_task_2.yaml  middle_task_3.yaml  middle_task_4.yaml  middle_task_5.yaml  middle_task_6.yaml  middle_task_7.yaml  middle_task_8.yaml  middle_task_9.yaml  sensor_task_1.yaml  sensor_task_2.yaml  sensor_task_3.yaml  sensor_task_4.yaml  task_graph_mock_2.yaml
config/risk/: dummy_risk_1.yaml
config/scheduler/: dynamic_scheduler.yaml
config/tasks/: dummy_task_2.yaml  dummy_task_3.yaml
configs/: example_config.yaml  task_graph_example.yaml
configs/tasks/: dummy_task.yaml  dummy_task_2.yaml  dummy_task_3.yaml
experimental/: CMakeLists.txt
experimental/Cristiano/: CMakeLists.txt  event_point_2_cores.csv  event_point_4_cores.csv  event_point_8_cores.csv  main.py
experimental/Cristiano/try_comm/: CMakeLists.txt  main.cpp
experimental/Cristiano/try_graph/: 1.try_graph.yaml
experimental/yuting/: CMakeLists.txt
experimental/yuting/context/: CMakeLists.txt  main.cpp
experimental/yuting/glog/: CMakeLists.txt  main.cpp
experimental/yuting/gtest/: CMakeLists.txt  main.cpp
experimental/yuting/perf/: CMakeLists.txt  colocate_effect.cpp  colocate_threads.cpp  dead_loop.cpp  no_libpfm.cpp  preemption.cpp  thread_time.cpp  try_perf.cpp  workload.cpp  workload.h
experimental/yuting/perfmon2/: CMakeLists.txt  no_libpfm.cpp
experimental/yuting/shm/: CMakeLists.txt  main.cpp
experimental/zifeng/: CMakeLists.txt
experimental/zifeng/try_serial_comm/: CMakeLists.txt  main.cc
record/: event_point_12723255.csv  event_point_13573092.csv
scripts/: init_env.sh  run_project.sh
scripts/analysis/: gantt.R  gantt.csv  plot_figure.py  process_data.py  theme.py
scripts/analysis/data/: ablation_study.csv  base_percentage.csv  cache_miss_fps.csv  compare_hist_fps.csv  core_rrate_utilization.csv  gantt.csv  nt_delay.csv  nt_delayed.csv  time_utilization_fps.csv
src/: CMakeLists.txt  Gogo.cpp
src/gogoRT/: CMakeLists.txt  CommBuffer.cpp  CommBuffer.h  Dispatcher.cpp  Dispatcher.h  Invoker.h  Message.h  RiskHandler.cpp  RiskHandler.h  Routine.cpp  Routine.h  Scheduler.cpp  Scheduler.h  SchedulerFactory.cpp  SchedulerFactory.h  Task.h  TaskFactory.cpp  TaskFactory.h  Worker.cpp  Worker.h
src/gogoRT/Comm/: CMakeLists.txt  CommBuffer.cpp  CommBuffer.h  Pipe.h  PipeReader.h  PipeWriter.h
src/gogoRT/monitor/: CMakeLists.txt  Monitor.cpp  Monitor.h  TaskGraph.cpp  TaskGraph.h
src/gogoRT/risk/: CMakeLists.txt  Detector.h  Risk.cpp  Risk.h  RiskFactory.cpp  RiskFactory.h  RiskInstance.h  RiskManager.cpp  RiskManager.h
src/gogoRT/risk/detector/: CMakeLists.txt  DummyRisk1Detector.cpp  DummyRisk1Detector.h
src/gogoRT/risk/handler/: CMakeLists.txt  DummyRisk1Handler.cpp  DummyRisk1Handler.h
src/gogoRT/risk/risk_message/: CMakeLists.txt  DummyRisk1.cpp  DummyRisk1.h
src/gogoRT/risk/risk_type/: CMakeLists.txt  DummyRisk1.cpp  DummyRisk1.h
src/gogoRT/schedulers/: CMakeLists.txt  DummyScheduler.cpp  DummyScheduler.h  DynamicScheduler.cpp  DynamicScheduler.h  PriorityScheduler.cpp  PriorityScheduler.h
src/gogoRT/unit_tests/: CMakeLists.txt  Pipe_test.cpp
src/gogoRT/utils/: CMakeLists.txt  Recorder.cpp  Recorder.h  Timer.cpp  Timer.h  perf_utils.cpp  perf_utils.h  time_utils.cpp  time_utils.h  utils.cpp  utils.h
src/messages/: CMakeLists.txt  Control.cpp  Control.h  ControlCommand.h  DummyMessage.cpp  DummyMessage.h  DummyMessage2.cpp  DummyMessage2.h
src/messages/mock/: CMakeLists.txt  MockMessage.cpp  MockMessage.h
src/pyxisRT/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.h  Pipe.cpp  Pipe.h  PipeReader.h  PipeWriter.h  Worker.cpp  Worker.h
src/task/: CMakeLists.txt  DummyTask.cpp  DummyTask2.cpp  DummyTask2.h  DummyTask3.cpp  DummyTask3.h
src/task/mock/: CMakeLists.txt  MockTask.cpp  MockTask.h  MockWorkload.cpp  MockWorkload.h
src/tasks/: CMakeLists.txt  DummyTask.cpp  DummyTask.h  DummyTask2.cpp  DummyTask2.h  DummyTask3.cpp  DummyTask3.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
